[package]
name = "totp-gen"
version = "0.1.0"
authors = ["Bernabé Borrero <bernabeborrero@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
base32 = "0.4.0"
sha-1 = "0.8.2"
hmac = "0.7.1"
pad = "0.1.6"